# The-Evolution-of-Todo

./: .gitignore  CLAUDE.md  Constitution.md  README.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/001-todo-cli-app/: 0001-phase-i-todo-cli-specification.spec.prompt.md  0002-phase-i-todo-cli-implementation-plan.plan.prompt.md  0003-phase-i-todo-cli-task-generation.tasks.prompt.md  0004-phase-i-todo-cli-implementation.green.prompt.md
history/prompts/constitution/: 0001-initial-constitution-creation.constitution.prompt.md
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-app/checklists/: requirements.md
specs/001-todo-cli-app/contracts/: cli-interface.md  task-manager-service.md
src/: __init__.py
src/cli/: __init__.py  formatters.py  main.py
src/models/: __init__.py  exceptions.py  task.py
src/services/: __init__.py  task_manager.py
